--- a/public/index-style/app.css
+++ b/public/index-style/app.css
@@ -39893,9 +39893,9 @@ img {
     padding: 25px 15px
 }
 
-.f-category img {
+/* .f-category img {
     height: 60px
-}
+} */
 
 .content-box {
     box-shadow: none;
